<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TeamCityApp</string>
    <string name="default_name_value">Name</string>
    <string name="default_description_value">Description</string>
    <string name="tab_connected">Connected</string>
    <string name="tab_disconnected">Disconnected</string>
    <string name="home_drawer_item">Home</string>
    <string name="projects_drawer_item">Projects</string>
    <string name="favorites_drawer_item">Favorites</string>
    <string name="running_builds_drawer_item">Running builds</string>
    <string name="agents_drawer_item">Agents</string>
    <string name="build_queue_drawer_item">Build queue</string>
    <string name="about_drawer_item">About</string>
    <string name="text_menu_accounts">Accounts</string>
    <string name="text_rate_the_app">Rate the app</string>
    <string name="text_divider">•</string>
    <string name="text_add_account">Add another account</string>
    <string name="text_manage_accounts">Manage accounts</string>
    <string name="content_navigation_content_description">Navigation drawer</string>
    <string name="title_activity_agent_tabs">@string/agents_drawer_item</string>
    <string name="title_activity_project_and_build_type_navigator">@string/projects_drawer_item</string>
    <string name="title_activity_build_list">Builds</string>
    <string name="title_activity_build">Build</string>
    <string name="title_activity_navigation">Project/BuildType</string>
    <string name="title_activity_create_account">Create account</string>
    <string name="title_activity_account_list">Manage Accounts</string>
    <string name="title_activity_running_builds">@string/running_builds_drawer_item</string>
    <string name="title_activity_queued_builds">@string/build_queue_drawer_item</string>
    <string name="title_activity_about">@string/about_drawer_item</string>
    <string name="title_activity_about_libraries">Libraries</string>
    <string name="tab_overview">Overview</string>
    <string name="tab_changes">Changes</string>
    <string name="tab_tests">Tests</string>
    <string name="tab_build_log">Build Log</string>
    <string name="tab_artifacts">Artifacts</string>
    <string name="tab_parameters">Parameters</string>
    <string name="tab_snapshot_dependencies">Snapshot dependencies</string>
    <string name="progress_dialog_title">Checking</string>
    <string name="progress_dialog_content">Please wait…</string>
    <string name="add_new_account_dialog_title">Add user account</string>
    <string name="add_new_account_dialog_account_exist_error_message">Account with such teamcity url already exist!</string>
    <string name="add_new_account_dialog_create_account_button_text">Add</string>
    <string name="add_new_account_warning_dialog_content">In order to use application you should add user account</string>
    <string name="discard_dialog_content">Discard user account?</string>
    <string name="discard_dialog_positive_button_text">Discard</string>
    <string name="discard_dialog_negative_button_text">Cancel</string>
    <string name="error_view_oops_message">Oops</string>
    <string name="error_view_retry_button_text">TRY AGAIN</string>
    <string name="error_view_error_text">There\'s an error loading the page</string>
    <string name="snack_bar_remove_account_undo_button_text">Undo</string>
    <string name="snack_bar_remove_account_single_account_removed_text">User account removed</string>
    <string name="snack_bar_remove_account_multiple_accounts_removed_text">user accounts removed</string>
    <string name="action_mode_selected_text">selected</string>
    <string name="dialog_remove_active_account_positive_button_text">Sure</string>
    <string name="dialog_remove_active_account_positive_negative_text">Nope</string>
    <string name="dialog_remove_active_account_positive_content_text">Are you sure to delete active user account?</string>
    <string name="dialog_remove_not_active_account_positive_content_text">Are you sure to delete a user account?</string>
    <string name="empty">No data</string>
    <string name="download_artifact_dialog_title">Downloading artifact file..</string>
    <string name="text_cancel_button">Cancel</string>
    <string name="download_artifact_retry_snack_bar_text">We\'ve got problem downloading an artifact</string>
    <string name="download_artifact_retry_snack_bar_retry_button">Retry</string>
    <string name="load_more_retry_snack_bar_text">Error loading more data</string>
    <string name="empty_list_message_accounts">No accounts</string>
    <string name="empty_list_message_artifacts">No artifacts</string>
    <string name="empty_list_message_builds">No builds</string>
    <string name="empty_list_message_running_builds">No running builds</string>
    <string name="empty_list_message_favorite_running_builds">No favorite running builds</string>
    <string name="empty_list_message_build_queue">Builds queue is empty</string>
    <string name="empty_list_message_favorite_build_queue">Favorite builds queue is empty</string>
    <string name="empty_list_message_agents">No connected agents</string>
    <string name="empty_list_message_agents_disconnected">No disconnected agents</string>
    <string name="empty_list_message_parameters">No user defined parameters</string>
    <string name="empty_list_message_changes">No changes</string>
    <string name="empty_list_message_projects_or_build_types">No projects or build configurations</string>
    <string name="empty_list_message_favorites">No favorite configurations added</string>
    <string name="empty_passed_tests">There are no failed tests</string>
    <string name="empty_list_files">No files</string>
    <string name="default_icon_text">{icon}</string>
    <string name="unknown_trigger_type_text">Unknown trigger type!</string>
    <string name="triggered_deleted_user_text">Deleted user</string>
    <string name="triggered_deleted_configuration_text">Deleted configuration</string>
    <string name="build_result_section_text">Result</string>
    <string name="build_wait_reason_section_text">Wait reason</string>
    <string name="build_time_section_text">Time</string>
    <string name="build_queued_time_section_text">Queued time</string>
    <string name="build_time_to_start_section_text">Time to start</string>
    <string name="build_branch_section_text">Branch</string>
    <string name="build_agent_section_text">Agent</string>
    <string name="build_triggered_by_section_text">Triggered by</string>
    <string name="build_restarted_by_section_text">Restarted by</string>
    <string name="build_canceled_by_text">Canceled by</string>
    <string name="build_cancellation_time_text">Cancellation time</string>
    <string name="build_personal_text">Personal of</string>
    <string name="build_type_by_section_text">Configuration</string>
    <string name="build_project_by_section_text">Project</string>
    <string name="test_details_title">Details</string>
    <string name="artifact_download">Download</string>
    <string name="artifact_open">Open</string>
    <string name="artifact_open_in_browser">Open in browser</string>
    <string name="permissions_dialog_title">Permissions warning</string>
    <string name="permissions_dialog_content">In order to download artifact the app requires to have WRITE_EXTERNAL_STORAGE permissions granted.</string>
    <string name="permissions_install_packages_dialog_content">In order to install apk files the app requires to have install unknown apps permissions enabled.</string>
    <string name="permissions_dialog_text_no_permissions">The download artifacts functionality is disabled. Please enable required permissions.</string>
    <string name="permissions_install_packages_dialog_text_no_permissions">You can\'t install packages. You haven\'t granted permission. Please enable required permissions.</string>
    <string name="build_element_copy">Copy</string>
    <string name="build_element_show_all_builds_built_branch">Show builds built on this branch</string>
    <string name="build_element_open_build_type">Open configuration</string>
    <string name="build_element_open_project">Open project</string>
    <string name="build_element_copy_text">Text copied!</string>
    <string name="dialog_ok_title">OK</string>
    <string name="server_field_hint">TeamCity server url</string>
    <string name="server_cannot_be_empty">Server url cannot be empty</string>
    <string name="server_no_such_server">No TeamCity server associated with hostname</string>
    <string name="server_correct_url">Please provide correct server url</string>
    <string name="server_check_url">Please check server url</string>
    <string name="server_password_cannot_be_empty">Password cannot be empty</string>
    <string name="server_user_name_cannot_be_empty">Username cannot be empty</string>
    <string name="server_not_secure_http">Using http is insecure and it\'s recommend to use https instead. Use your favorite search engine to get more information about this topic.</string>
    <string name="error_save_account">Could not save user. Please try again</string>
    <string name="text_account_un_secure_ssl_">Ignore SSL certificate validity is enabled for this account</string>
    <string name="text_passed">Passed (%d)</string>
    <string name="text_failed">Failed (%d)</string>
    <string name="text_ignored">Ignored (%d)</string>
    <string name="text_empty_test_details">No test details</string>
    <string name="navigate_up">Navigate up</string>
    <string name="about_app_text_rate_app">Rate the app</string>
    <string name="about_app_text_found_issue">Found an issue?</string>
    <string name="about_app_subtext_found_issue">Or want to suggest an improvement?</string>
    <string name="about_app_url_found_issue">https://github.com/vase4kin/TeamCityApp/issues/new/choose</string>
    <string name="about_app_url_privacy" tools:ignore="TypographyDashes">https://telegra.ph/TeamCityApp-Private-Policy-09-18</string>
    <string name="about_app_text_source_code">Source code</string>
    <string name="about_app_url_source_code">https://github.com/vase4kin/TeamCityApp</string>
    <string name="about_app_text_libraries">Libraries</string>
    <string name="about_app_text_contacts">Contacts</string>
    <string name="about_app_text_dev">Developer details</string>
    <string name="about_app_text_app">Application details</string>
    <string name="about_app_text_server_info">Server info</string>
    <string name="about_app_text_web">Website</string>
    <string name="about_app_text_server_url">Server url</string>
    <string name="about_app_url_web">https://teamcity.app</string>
    <string name="about_app_text_privacy">Privacy policy</string>
    <string name="text_login_again">In order to view build log please login</string>
    <string name="text_browse_build_log">Viewing build log feature is disabled due security reasons.\nIn order to view build log please open it in the web browser.</string>
    <string name="text_button_login">Login</string>
    <string name="text_browse_build_log_button">Open in the web browser</string>
    <string name="text_build_branch">Build branch</string>
    <string name="text_no_branches_available">No branches available</string>
    <string name="text_no_branches_available_to_filter">No branches available to filter</string>
    <string name="text_loading_branches">Loading branches</string>
    <string name="hint_default_build_branch">Default branch</string>
    <string name="text_switcher_for_pinned">Pinned</string>
    <string name="text_switcher_for_personal">Personal</string>
    <string name="text_filters">Filter</string>
    <string name="text_filters_none">None</string>
    <string name="rate_title">Rate TeamCityApp</string>
    <string name="rate_description">Like the app? Give us a review, we\'ll appreciate it.</string>
    <string name="rate_cancel">Cancel</string>
    <string name="rate_now">Rate</string>
</resources>