<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseItem">

    <FrameLayout style="@style/Item.NotClickable">

        <LinearLayout style="@style/BaseItemsContainer">

            <include layout="@layout/layout_item_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@id/itemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_title"
                    style="@style/ItemTitle" />

                <TextView
                    style="@style/ItemSubTitle"
                    android:text="@string/rate_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/small_margin">

                    <Button
                        android:id="@+id/button_cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rate_cancel" />

                    <Button
                        android:id="@+id/button_rate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rate_now" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/layout_divider" />

    </FrameLayout>

</FrameLayout>