<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/text_build_branch"
        android:textAppearance="?attr/textAppearanceBody1" />

    <AutoCompleteTextView
        android:id="@+id/autocomplete_branches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_default_build_branch"
        android:imeOptions="actionDone"
        android:inputType="textNoSuggestions"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_no_branches_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/text_no_branches_available"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_no_branches_available_to_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/text_no_branches_available_to_filter"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/material_on_background_emphasis_medium"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/progress_branches_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/default_margin"
            android:text="@string/text_loading_branches"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="@color/material_on_background_emphasis_medium" />

        <ProgressBar
            android:id="@+id/progress_wheel"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="?attr/colorOnBackground" />

    </LinearLayout>

</LinearLayout>