<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.vase4kin.teamcityapp.runbuild.view.RunBuildActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fab_filter"
        style="@style/MaterialButton"
        android:text="Apply filters"
        app:backgroundTint="@color/colorAccent"
        app:cornerRadius="32dp"
        app:icon="@drawable/ic_done_24px" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/recycler_view_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/base_item_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <include layout="@layout/layout_branch_filter" />

                <include layout="@layout/layout_divider" />

                <LinearLayout
                    android:id="@+id/chooser_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/default_margin"
                    android:paddingTop="@dimen/padding_switch"
                    android:paddingRight="@dimen/default_margin"
                    android:paddingBottom="@dimen/padding_switch">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_filters"
                        android:textColor="@color/main_text_color"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/selected_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_filters_none" />

                </LinearLayout>

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_is_personal"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_for_personal" />

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_is_pinned"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_for_pinned" />

                <include
                    android:id="@+id/divider_switcher_is_pinned"
                    layout="@layout/layout_divider" />

            </LinearLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
